roommate changes and property changes
