# storage/api-docs/api-docs.json
@@ -2261,7 +2261,7 @@
                 ]
             }
         },
-        "/property/deleteProperty/{id}": {
+        "/property/deleteProperty": {
             "post": {
                 "tags": [
                     "property"
@@ -2269,17 +2269,25 @@
                 "summary": "Delete a property",
                 "description": "Delete a property with all associated data",
                 "operationId": "deleteProperty",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of the property to delete",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "property_id"
+                                ],
+                                "properties": {
+                                    "property_id": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Property deleted successfully.",
@@ -2348,7 +2356,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/x-www-form-urlencoded": {
+                        "multipart/form-data": {
                             "schema": {
                                 "required": [
                                     "property_id"
@@ -2444,7 +2452,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/x-www-form-urlencoded": {
+                        "multipart/form-data": {
                             "schema": {
                                 "required": [
                                     "property_id"
@@ -2720,6 +2728,176 @@
                     }
                 ]
             }
+        },
+        "/roommate/findRoommate": {
+            "post": {
+                "tags": [
+                    "roommate"
+                ],
+                "summary": "Find a roommate based on preferences",
+                "description": "This API allows users to submit their preferences for finding a roommate based on various factors like sleep schedule, lifestyle habits, and more.",
+                "operationId": "findRoommate",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "sleep_schedule",
+                                    "prperty_id",
+                                    "lifestyle_habits",
+                                    "social_preferences",
+                                    "pet_friendly",
+                                    "study_habits",
+                                    "cooking_kitchen_usage"
+                                ],
+                                "properties": {
+                                    "prperty_id": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "sleep_schedule": {
+                                        "type": "integer",
+                                        "example": 2
+                                    },
+                                    "lifestyle_habits": {
+                                        "type": "string",
+                                        "example": "1,2,3"
+                                    },
+                                    "social_preferences": {
+                                        "type": "string",
+                                        "example": "1,2"
+                                    },
+                                    "pet_friendly": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "study_habits": {
+                                        "type": "integer",
+                                        "example": 2
+                                    },
+                                    "cooking_kitchen_usage": {
+                                        "type": "integer",
+                                        "example": 3
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Roommate preferences saved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Roommate preferences saved successfully."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Invalid input data."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Something went wrong"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/roommate/roommate-list": {
+            "get": {
+                "tags": [
+                    "roommate"
+                ],
+                "operationId": "roommateList",
+                "responses": {
+                    "200": {
+                        "description": "Property List by Rating",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": "1"
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": "Property One"
+                                        },
+                                        "rating": {
+                                            "type": "number",
+                                            "format": "float",
+                                            "example": 4.5
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Something went wrong"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -2752,6 +2930,10 @@
         {
             "name": "rating",
             "description": "rating"
+        },
+        {
+            "name": "roommate",
+            "description": "roommate"
         }
     ],
     "security": [
